--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Hello SAFI! This page will provide Open API.</h1>
+        <a href="./api/tests/ping">Go to Ping</a>
     </body>
 </html>
