Small but not enough improvement.

--- a/src/main/webapp/errors/internal-error.html
+++ b/src/main/webapp/errors/internal-error.html
@@ -3,10 +3,10 @@
     <!-- ToDo: Must be implements -->
     <head>
         <link rel="icon" type="image/x-icon" href="../favicon.ico">
-        <title>Malformed request</title>
+        <title>Internal error</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>The request is malformed.</h1>
+        <h1>The server encountered an unexpected condition that prevented it from fulfilling the request.</h1>
     </body>
 </html>
