--- a/src/main/webapp/errors/request-violation.html
+++ b/src/main/webapp/errors/request-violation.html
@@ -3,10 +3,10 @@
     <!-- ToDo: Must be implements -->
     <head>
         <link rel="icon" type="image/x-icon" href="../favicon.ico">
-        <title>request-constraint-violation</title>
+        <title>Request violation</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Cause error.</h1>
+        <h1>The request violates the constraints.</h1>
     </body>
 </html>
